fixed scrollbar spawn

--- a/style.css
+++ b/style.css
@@ -274,7 +274,6 @@ nav {
 }
 
 .work__list {
-    width: 100%;
     margin: 0;
     padding: 0 5px;
 }
